src/objects/Application_Group__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]
Object to group apps, based on cumulative royalty tracking</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Application_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range_number__c</fullName>
        <label>Number of Date Range Records</label>
        <summaryForeignKey>Application_Group_Date_Range__c.Application_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rate_Table__c</fullName>
        <description>This is a temporary field, used ONLY for the purpose of importing Microgen tables into SFDC.. this field serves no other purpose</description>
        <inlineHelpText>This is a temporary field, used ONLY for the purpose of importing Microgen tables into SFDC.. this field serves no other purpose</inlineHelpText>
        <label>Rate Table</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Current Ship Volume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Ship Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>